--- a/index.html
+++ b/index.html
@@ -11,58 +11,20 @@
 <body class="h-full grid place-items-center">
 
     <div id="app">
-        <section v-show="inProgressAssignments.length">
-            <h2 class="font-bold mb-2">
-                In Progress
-            </h2>
-
-            <ul>
-                <li v-for="assignment in inProgressAssignments" :key="assignment.id">
-                    <label>
-                        {{ assignment.name }}
-                        <input type="checkbox" v-model="assignment.complete">
-                    </label>
-                </li>
-            </ul>
-        </section>
-
-        <section  v-if="completedAssignments.length" class="mt-8">
-            <h2 class="font-bold mb-2">
-                Completed
-            </h2>
-
-            <ul>
-                <li v-for="assignment in completedAssignments" :key="assignment.id">
-                    <label>
-                        {{ assignment.name }}
-                        <input type="checkbox" v-model="assignment.complete">
-                    </label>
-                </li>
-            </ul>
-        </section>
+        <app-button></app-button>
+        <app-button></app-button>
     </div>
 
     <script>
         let app = {
-            data() {
-                return {
-                    assignments: [
-                        { name: 'Finish Project', complete: false, id: 1 },
-                        { name: 'Read Chapter 4', complete: false, id: 2 },
-                        { name: 'Turn in homework', complete: false, id: 3 },
-                    ]
-                }
-            },
-
-            computed: {
-                inProgressAssignments(){
-                    return this.assignments.filter(assignment => !assignment.complete);
+            components: {
+                'app-button': {
+                    template: `
+                    <button class="bg-gray-200 hover:bg-gray-400 border rounded px-5 py-2">Hey There</button>
+                    `
                 },
-                completedAssignments(){
-                    return this.assignments.filter(assignment => assignment.complete);
-                }
             }
-        }
+        };
 
         Vue.createApp(app).mount('#app');
     </script>
